# waste-image-classification

./: .gitignore  README.md  app.py  pyproject.toml
configs/: efficientnet.yaml  experiments.yaml
labeling_guide/: TAXONOMY.md  review-checklist.md
model_cards/: ecosort-template.md
reports/: results.csv
scripts/: plot_results.py
src/ecosort/: __init__.py  calibrate.py  data.py  error_analysis.py  evaluate.py  export.py  gradcam.py  inference.py  metrics.py  models.py  train.py
tests/: test_core.py
