[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecosort"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "Pillow>=10", "PyYAML>=6", "torch>=2.1", "torchvision>=0.16"]

[project.optional-dependencies]
train = ["scikit-learn>=1.3", "matplotlib>=3.8", "seaborn>=0.13", "tqdm>=4.66"]
demo = ["streamlit>=1.32", "pandas>=2"]
dev = ["pytest>=8", "ruff>=0.4"]
viz = ["pandas>=2", "matplotlib>=3.8"]

[project.scripts]
ecosort-train = "ecosort.train:main"
ecosort-evaluate = "ecosort.evaluate:main"
ecosort-calibrate = "ecosort.calibrate:main"
ecosort-export = "ecosort.export:main"
ecosort-error-report = "ecosort.error_analysis:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
